fixing mobile jumping

--- a/mobile.css
+++ b/mobile.css
@@ -12,7 +12,7 @@ body{
 	top:0%;
 	overflow: hidden; 
 	width:100%;
-	height:100vh;
+	height:100%;
 	border-width: 0;
 	z-index:0;
 	
